syntax = "proto3";

package pb;

import "account.proto";

option go_package = "github.com/ahmadjavaidwork/simple-bank/pb";

message ListAccountRequest {
    int32 page_id = 1;
    int32 page_size = 2;
}

message ListAccountResponse {
    repeated Account account = 1;
}

